# prostr-alfo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/prostr_alfo/: __init__.py  cli.py  config.py
src/prostr_alfo/analysis/: evidence.py  features.py  mutation.py  pipeline.py  scoring.py
src/prostr_alfo/frontend/: app.py
src/prostr_alfo/io/: fasta.py  input.py
src/prostr_alfo/models/: schemas.py
src/prostr_alfo/reporting/: plots.py  pymol.py  references.json  report.py
src/prostr_alfo/structure/: __init__.py  alphafold.py  mapping.py  mutant.py  parser.py
src/prostr_alfo/utils/: biology.py  paths.py
src/prostr_alfo/variants/: __init__.py  mutations.py
tests/: test_alphafold_client.py  test_evidence.py  test_mapping.py  test_mutant_structure.py  test_mutations.py
